@@ -1,3 +1,9 @@
+2016-08-21  Natalia Portillo  <claunia@claunia.com>
+
+	* LisaTag.cs:
+	* DiscImageChef.Decoders.csproj: Separate Lisa tag decoding
+	from Lisa filesystem and added Priam tags.
+
 2016-08-18  Natalia Portillo  <claunia@claunia.com>
 
 	* ATIP.cs: Make ATIP manufacturer resolver a public method.
